--- a/css/index.section-pricing.partial.css
+++ b/css/index.section-pricing.partial.css
@@ -164,7 +164,7 @@
   font-weight: 400;
   color: var(--text-color-secondary);
   padding: 12px 0;
-  border-bottom: 1px solid #e6e9ed;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .pricing__standard-list-item {
